# crates/anvil-dashboard-server/src/capabilities/mod.rs
@@ -1,2 +1,4 @@
+pub mod patterns;
 pub mod plans;
 pub mod protection;
+
